syntax = "proto3";

package org.couchers.bugs;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";

import "annotations.proto";

service Bugs {
  option (auth_level) = AUTH_LEVEL_OPEN;

  rpc Version(google.protobuf.Empty) returns (VersionInfo) {
    // Returns backend version info
    option (google.api.http) = {
      get : "/version"
    };
  }

  rpc ReportBug(ReportBugReq) returns (ReportBugRes) {
    // Report a bug
  }

  rpc Status(StatusReq) returns (StatusRes) {
    // Hits database, can be used to check the backend is up and working
    option (google.api.http) = {
      get : "/status"
    };
  }

  rpc GetDescriptors(google.protobuf.Empty) returns (google.api.HttpBody) {
    // Returns the proto descriptors the backend is using
    option (google.api.http) = {
      get : "/descriptors.pb"
    };
  }
}

message VersionInfo {
  string version = 1;
}

message ReportBugReq {
  string subject = 1;
  string description = 2;
  string results = 4;

  string frontend_version = 5;
  string user_agent = 6;
  string page = 7;
}

message ReportBugRes {
  string bug_id = 2;
  string bug_url = 3;
}

message StatusReq {
  string nonce = 1;
}

message StatusRes {
  string nonce = 1;
  string version = 2;
  uint64 coucher_count = 3;
}
